# common-kaba-packages

./: .gitignore  .kaba-package  .kaba-repo  README.md  action_add.kaba  action_delete.kaba  action_list.kaba  action_remote.kaba  action_tag.kaba  action_transmit.kaba  actions.kaba  alex.kaba  array-range.k²  autotag.kaba  circuit.kaba  cli_parser.kaba  common.kaba  config.kaba  d.k²  dblister.kaba  demo.kaba  dict-1.k2  dict-2.k2  diff.kaba  direct.kaba  e.k²  expand.kaba  export.kaba  f.k²  find-sources-for-meson.kaba  func-2.k²  func-basic.k²  func-names.k2  func-recursion.k²  gui.kaba  h  huibui.kaba  install.sh  k.kaba  kabama.kaba  (+36 more)
.forgejo/workflows/: cmake-multi-platform.yml
alex/: .kaba-package  alex.kaba
algebra/: .kaba-package  algebra.kaba
algebra/sharedlib/: CMakeLists.txt  xmake.conf
algebra/sharedlib/src/: main.cpp
algebra/sharedlib/src/lib/algebra/: BigInt.cpp  BigInt.h  _kaba_export.cpp  _kaba_export.h  algebra.h  crypto.cpp  crypto.h  vli.cpp
algebra/test/: juxtaposition.kaba  rational.kaba  vli.kaba  vli2.kaba  vli3.kaba  vli4.kaba  vli5.kaba
asciitools/: .kabapackage  showimage.kaba
bindiff/: bindiff.kaba  cli_parser.kaba  install.sh
bson/: .kaba-package  bson.kaba
bson/sharedlib/: CMakeLists.txt  xmake.conf
bson/sharedlib/src/: main.cpp
camsync/: camsync.kaba
circuit/: .kaba-package  circuit.kaba  circuit64.kaba  grid.kaba  gui.kaba  install.sh  linalg.kaba  linalg64.kaba  panel.kaba
cli/: .kaba-package  cli.kaba  direct.kaba  install.sh  ncurses.kaba  terminal.kaba
cloud/: .kaba-package  cloud.kaba  convert.kaba  cut-z.kaba  pcd.kaba  view.kaba
codeeditor/: codeeditor.kaba  syntaxhighlight.kaba
codeeditor/sharedlib/: CMakeLists.txt  vcpkg.json  xmake.conf
crypto/: .kaba-package  crypto.kaba
crypto/sharedlib/: CMakeLists.txt  xmake.conf
crypto/test/: crypto1.kaba
doc/classes/: Beam.txt  Bone.txt  Controller.txt  DirEntry.txt  Event.txt  FloatInterpolator.txt  Layer.txt  Material.txt  Music.txt  Painter.txt  Picture.txt  Skin.txt  Sound.txt  Timer.txt  TraceData.txt  Window.txt  int.txt
doc/variables/: AppDirectoryStatic.txt  Engine.txt  MouseD.txt  ScreenHeight.txt  SmoothLines.txt  TargetHeight.txt  VolumeMusic.txt
env/: .kaba-package  env.kaba
fft/: .kaba-package  fft.kaba
fft/.docs/: fft.txt
fft/sharedlib/: CMakeLists.txt  xmake.conf
fft/sharedlib/src/: main.cpp
fft/sharedlib/src/lib/fft/: _kaba_export.cpp  _kaba_export.h  fft.cpp
filetags/: filetags.kaba
gl/: .kaba-package  gl.kaba
glfw/: .kaba-package  glfw.kaba
hui/: .kaba-package  hui.kaba
huibui/: .kaba-package  cli_parser.kaba  config.kaba  demo.kaba  export.kaba  huibui.kaba  install.sh  language.kaba  options  resource.kaba  source.kaba
iter/: iter.kaba
k2k/: .kaba-package  a.k²  a0.k²  a01.k²  array-1.k²  array-elements-2.k²  array-len.k²  install.sh  k.kaba  operators.k²
kabama/: .kaba-package  apply.kaba  cli.kaba  common.kaba  diff.kaba  expand.kaba  float.kaba  gui.kaba  install.sh  kabama.kaba  parser.kaba  runtime.kaba  simplify.kaba  subst.kaba  terminal.kaba  tests  zeros.kaba
lib/: alex.kaba  glfw.kaba  install.sh  linalg.kaba  linalg64.kaba  mongo.kaba  ncurses.kaba  opt.kaba  plot.kaba  psmove.kaba  sqlite.kaba  urdf.kaba  usb.kaba  vulkanx.kaba  xml.kaba  zlib.kaba  zmq.kaba
linalg/: linalg.kaba
linalg64/: linalg64.kaba
make-kaba-wiki/: .kaba-package  common.kaba  docu.kaba  make-kaba-wiki.kaba  prepare-internal-packages.kaba  prepare-package-doc.kaba  update.sh  upload.py  wiki.kaba
mesh/: .kaba-package  common.kaba  convert.kaba  format_3ds.kaba  format_mcm.kaba  format_obj.kaba  format_ply.kaba  format_stl.kaba  mesh.kaba  trace.kaba  view.kaba
misc/: conv-var.sh  convert-kaba.kaba  wiki-sketch.kaba
mongo/: .kaba-package  mongo.kaba
msgpack/: msgpack.kaba
ncurses/: .kaba-package  ncurses.kaba
net/: .kaba-package  net.kaba
obs/: .kaba-package  obs.kaba
opt/: opt.kaba
package/: .kaba-package  common.kaba  install.kaba  install.sh  list.kaba  package.kaba  remove.kaba  update.kaba
pdf/: .kaba-package  pdf.kaba  xmake.conf
plot/: .kaba-package  axis.kaba  plot.kaba  plotarea.kaba
polymesh/: .kaba-package  polymesh.kaba
polymesh/sharedlib/: CMakeLists.txt  xmake.conf
polymesh/sharedlib/src/: main.cpp
profiler/: .kaba-package
profiler/sharedlib/: CMakeLists.txt  xmake.conf
profiler/sharedlib/src/: main.cpp
psmove/: psmove.kaba
shadercomp/: .kaba-package  install.sh  shadercomp.kaba
simplevis/: .kaba-package  common.kaba  simplevis.kaba  volume.kaba
sisyphos/: .gitignore  .kaba-package  action_add.kaba  action_delete.kaba  action_list.kaba  action_remote.kaba  action_tag.kaba  action_transmit.kaba  actions.kaba  autotag.kaba  cli_parser.kaba  config.kaba  dblister.kaba  file.kaba  install.sh  localdb.kaba  plan  remote.kaba  sisyphos.kaba  tag.kaba  times
sqlite/: .kaba-package  sqlite.kaba
ssh/: .kaba-package  ssh.kaba
ssh/sharedlib/: CMakeLists.txt  xmake.conf
ssh/sharedlib/src/: main.cpp
statistics/: histogram.kaba  statistics.kaba
terminal/: .kaba-package
threadpool/: .kaba-package  threadpool.kaba
tools/: .kaba-package  bindiff.kaba  install.sh  migrate.kaba  replace.kaba  run-tests.kaba  sync-libs.kaba  test-compile.kaba
urdf/: .kaba-package  show.kaba  urdf.kaba
usb/: usb.kaba
visualization/: .kaba-package  cloud_renderer.kaba  label_manager.kaba  progress.kaba  visualization.kaba  volume_renderer.kaba
vulkan/: .kaba-package  vulkan.kaba
vulkanx/: vulkanx.kaba
xedit/: .kaba-package  editorwindow.kaba  xedit.kaba
xhui/: .kaba-package  xhui.kaba
xmake/: .kaba-package  build.kaba  build_manual.kaba  cli_parser.kaba  cmake-bundle.kaba  cmake-install.kaba  cmake-libraries.kaba  cmake.kaba  cmake_bundle.kaba  cmake_gitversion.kaba  cmake_install.kaba  cmake_libraries.kaba  cmake_visualstudio.kaba  install.sh  library.kaba  makefile.kaba  meson.kaba  project.kaba  vcpkg.kaba  visualstudio.kaba  xmake.kaba
xml/: xml.kaba
yrenderer/: .kaba-package  gfx.kaba  yrenderer.kaba
zlib/: .kaba-package
zmq/: .kaba-package  zmq.kaba
(+2810 files in other folders)
